# fyt

./: README.md  pyproject.toml
src/fyt/: app.py
src/fyt/templates/: index.html
