[project]
name = "fyt"
version = "0.1.0"
description = ""
authors = [
    {name = "valdsoares360-gif",email = "vald.soares360@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "yt-dlp (>=2026.3.17,<2027.0.0)"
]

[tool.poetry]
packages = [{include = "fyt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
